--- a/index.html
+++ b/index.html
@@ -1,74 +1,17 @@
-<!doctype html>
-<html lang="pt-BR">
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Sementes do Amanhã — Início</title>
-  <meta name="description" content="Sementes do Amanhã — ONG dedicada a educação ambiental e projetos comunitários.">
+  <meta charset="UTF-8">
+  <title>Meu Site</title>
 </head>
 <body>
-  <header>
-    <div class="branding">
-      <img src="imagens/logo.png" alt="Logo Sementes do Amanhã" width="120" />
-      <h1>Sementes do Amanhã</h1>
-      <p class="tagline">Educação ambiental e voluntariado perto de você</p>
-    </div>
+  <!-- Logo -->
+  <img src="imagens/logo.png" alt="Logo do site" width="200">
 
-    <nav aria-label="Navegação principal">
-      <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="projetos.html">Projetos</a></li>
-        <li><a href="cadastro.html">Cadastro / Doações</a></li>
-      </ul>
-    </nav>
-  </header>
+  <!-- Foto de voluntários -->
+  <img src="imagens/voluntarios.jpg" alt="Voluntários" width="300">
 
-  <main>
-    <section id="sobre" aria-labelledby="titulo-sobre">
-      <h2 id="titulo-sobre">Sobre a ONG</h2>
-      <p>
-        A Sementes do Amanhã é uma organização sem fins lucrativos que promove
-        educação ambiental em escolas e comunidades, plantios urbanos e
-        oficinas de conscientização.
-      </p>
-    </section>
-
-    <section id="missao" aria-labelledby="titulo-missao">
-      <h2 id="titulo-missao">Missão</h2>
-      <p>
-        Promover práticas sustentáveis e formar jovens líderes ambientais,
-        conectando voluntários e doadores com projetos locais.
-      </p>
-    </section>
-
-    <section id="valores" aria-labelledby="titulo-valores">
-      <h2 id="titulo-valores">Visão e Valores</h2>
-      <ul>
-        <li>Transparência</li>
-        <li>Educação</li>
-        <li>Inclusão</li>
-        <li>Sustentabilidade</li>
-      </ul>
-    </section>
-
-    <section id="contato" aria-labelledby="titulo-contato">
-      <h2 id="titulo-contato">Contato</h2>
-      <address>
-        Rua Exemplo, 123 — Bairro Verde<br />
-        Cidade — Estado<br />
-        E-mail: <a href="mailto:contato@sementesdoamanha.org">contato@sementesdoamanha.org</a>
-      </address>
-    </section>
-  </main>
-
-  <footer>
-    <p>© <span id="ano"></span> Sementes do Amanhã — Todos os direitos reservados.</p>
-    <p><a href="projetos.html">Conheça nossos projetos</a> — <a href="cadastro.html">Cadastre-se</a></p>
-  </footer>
-
-  <script>
-    // só para atualizar o ano no rodapé
-    document.getElementById('ano').textContent = new Date().getFullYear();
-  </script>
+  <!-- Foto de doações -->
+  <img src="imagens/doacoes.jpg" alt="Doações" width="300">
 </body>
 </html>
